sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:15: error: ')' expected but integer literal found.
       if(ecart== || ecart==0)
                            ^AlgCombSort11:19: error: ';' expected but ')' found.
      while ((i+ecart)<length)
                             ^